# panda-ng

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  meson.build  meson.options
.github/workflows/: publish_docker.yaml
configs/: panda-ng.mak
debian/: .gitignore  Dockerfile  control  pandare_22.04.deb  setup.sh
debian/dependencies/: ubuntu_22.04_base.txt  ubuntu_22.04_build.txt
include/: c_sys_includes.h  cpp_sys_includes.h  debug.h  defines.h  panda.h  plugin_plugin.h
include/autogen/: panda_c_aarch64.h  panda_c_arm.h  panda_c_i386.h  panda_c_mips.h  panda_c_mips64.h  panda_c_mips64el.h  panda_c_mipsel.h  panda_c_ppc.h  panda_c_ppc64.h  panda_c_x86_64.h  panda_cpp_aarch64.h  panda_cpp_arm.h  panda_cpp_i386.h  panda_cpp_mips.h  panda_cpp_mips64.h  panda_cpp_mips64el.h  panda_cpp_mipsel.h  panda_cpp_ppc.h  panda_cpp_ppc64.h  panda_cpp_x86_64.h  panda_python_aarch64.h  panda_python_arm.h  panda_python_i386.h  panda_python_mips.h  panda_python_mips64.h  panda_python_mips64el.h  panda_python_mipsel.h  panda_python_ppc.h  panda_python_ppc64.h  panda_python_x86_64.h
include/config/: aarch64-softmmu-config-target.h  alpha-softmmu-config-target.h  arm-softmmu-config-target.h  avr-softmmu-config-target.h  hppa-softmmu-config-target.h  i386-softmmu-config-target.h  loongarch64-softmmu-config-target.h  m68k-softmmu-config-target.h  microblaze-softmmu-config-target.h  microblazeel-softmmu-config-target.h  mips-softmmu-config-target.h  mips64-softmmu-config-target.h  mips64el-softmmu-config-target.h  mipsel-softmmu-config-target.h  or1k-softmmu-config-target.h  ppc-softmmu-config-target.h  ppc64-softmmu-config-target.h  riscv32-softmmu-config-target.h  riscv64-softmmu-config-target.h  rx-softmmu-config-target.h  s390x-softmmu-config-target.h  sh4-softmmu-config-target.h  sh4eb-softmmu-config-target.h  sparc-softmmu-config-target.h  sparc64-softmmu-config-target.h  tricore-softmmu-config-target.h  x86_64-softmmu-config-target.h  xtensa-softmmu-config-target.h  xtensaeb-softmmu-config-target.h
plugins/: config.panda  meson.build
plugins/cppskeleton/: cppskeleton.cpp
plugins/cskeleton/: cskeleton.c
plugins/hooks/: hooks.cpp  hooks_int_fns.h  meson.build
plugins/hw_proc_id/: hw_proc_id.c
plugins/hypercaller/: hypercaller.cpp  meson.build
plugins/osi/: meson.build  os_intro.c  osi_types.h
plugins/osi_linux/: default_profile.cpp  endian_helpers.h  kernel_2_4_x_profile.cpp  kernel_profile.h  meson.build  osi_linux.cpp  osi_linux.h
plugins/osi_linux/utils/kernelinfo/: kernelinfo_read.c
plugins/proc_start_linux/: meson.build  proc_start_linux.cpp
plugins/rust_skeleton/: Cargo.toml  meson.build
plugins/rust_skeleton/panda-bindings/: Cargo.toml  generate.sh
plugins/rust_skeleton/panda-bindings/src/autogen/: i386.rs  mips.rs  mips64.rs  mips64el.rs  mipsel.rs  ppc.rs  ppc64.rs  x86_64.rs
plugins/rust_skeleton/src/: lib.rs
plugins/syscalls2/: meson.build  syscalls2.cpp  syscalls2.h  syscalls2_info.c
plugins/syscalls2/generated-tpl/: syscall_switch_enter.tpl  syscall_switch_return.tpl  syscalls_args.tpl  syscalls_ext_typedefs.tpl
plugins/wintrospection/: meson.build  pandamemory.cpp  wintrospection.cpp
python/core/: .gitignore  pandare_build.py  requirements.txt  setup.cfg  setup.py
python/core/pandare2/: arch.py  panda.py  pypluginmanager.py  utils.py
python/core/pandare2/autogen/: .gitignore  _pandare_ffi_aarch64_softmmu.py  _pandare_ffi_arm_softmmu.py  _pandare_ffi_i386_softmmu.py  _pandare_ffi_mips64_softmmu.py  _pandare_ffi_mips64el_softmmu.py  _pandare_ffi_mips_softmmu.py  _pandare_ffi_mipsel_softmmu.py  _pandare_ffi_ppc64_softmmu.py  _pandare_ffi_ppc_softmmu.py  _pandare_ffi_x86_64_softmmu.py
python/core/pandare2/extras/: fileFaker.py  fileHook.py  ioctlFaker.py  modeFilter.py  procTrace.py  procWriteCapture.py
python/examples/: asid.py  proc_start.py
rust/panda-bindings/: generate.sh
rust/panda-bindings/src/: lib.rs
rust/panda-bindings/src/autogen/: aarch64.rs  arm.rs  i386.rs  mips.rs  mips64.rs  mips64el.rs  mipsel.rs  ppc.rs  ppc64.rs  x86_64.rs
subprojects/libosi/: CMakeLists.txt  meson.build
subprojects/libosi/include/iohal/memory/: common.h
subprojects/libosi/include/osi/windows/: iterator.h  ustring.h
subprojects/libosi/src/iohal/memory/: pmem_snapshot.cc
subprojects/libosi/src/iohal/translators/: virtual_memory_translators.cc
subprojects/libosi/src/osi/linux/: api.cc
subprojects/libosi/src/osi/windows/: api.cc  kernel_osi.cc  manager.cc
subprojects/libosi/src/osi/windows/mem_pe/: mem_pe.cc
utils/panda_header/: pandare_build.py  run_all.sh
utils/panda_header/includes/: python_fixes.h  python_plugin_includes.h
utils/scripts/: apigen.py
