[metadata]
name = pandare2
author = MIT Lincoln Laboratory
author_email = luke.craig@ll.mit.edu
description = PANDA Python bindings
long_description_content_type = text/markdown
long_description = file:README.md
license = MIT
license_files =
    LICENSE
url = https://github.com/panda-re/panda-ng
keywords = panda
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    cffi
